# HFT-Ticker-Analysis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  IMPLEMENTATION_STEPS.txt  LOW_LATENCY_OPTIMIZATIONS.md  README.md  assignemnt.md  build.sh  data_flow_order_desing.md  demo  docker-run.sh  run_example.sh  test.sh  test_without_websocket
include/: AsyncCSVLogger.h  BranchPrediction.h  CSVLogger.h  CoinbaseTickerAnalyzer.h  EMACalculator.h  HighResTimer.h  JSONParser.h  LockFreeRingBuffer.h  NUMAUtils.h  ThreadUtils.h  TickerData.h  WebSocketClient.h
src/: AsyncCSVLogger.cpp  CSVLogger.cpp  CoinbaseTickerAnalyzer.cpp  EMACalculator.cpp  HighResTimer.cpp  JSONParser.cpp  NUMAUtils.cpp  ThreadUtils.cpp  TickerData.cpp  WebSocketClient.cpp  main.cpp
tests/: CMakeLists.txt  test_AsyncCSVLogger.cpp  test_CSVLogger.cpp  test_CoinbaseTickerAnalyzer.cpp  test_EMACalculator.cpp  test_JSONParser.cpp  test_TickerData.cpp  test_essential.cpp  test_main.cpp
